tests/ui/compile-fail/pin_data/unexpected_args.rs
use pinned_init::*;

#[pin_data(Bar)]
struct Foo {}

fn main() {}
