tests/ui/compile-fail/pin_data/unexpected_args.stderr
error: Expected nothing or `PinnedDrop` as arguments to `#[pin_data]`.
 --> tests/ui/compile-fail/pin_data/unexpected_args.rs:3:12
  |
3 | #[pin_data(Bar)]
  |            ^^^
